Completed DOM Manipulation video and notes

--- a/Week 1/Day3- Javascript/index.html
+++ b/Week 1/Day3- Javascript/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <h1 class="title">Title</h1>
+    <div>
+      <span title="hello" id="hi" data-test="this is a test" data-longer-name="sdsfsagfas">Hello</span>
+      <span id="bye" class ="bye1 bye2">Bye</span>
+    </div>
+
+
+
+
+
+
 
     <!-- these script files are NOT modules, so everything inside are public  -->
     <script src="
@@ -17,5 +27,6 @@ https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
     <script src="./let-const.js"></script>
     <script src="./copy-object.js"></script>
     <script src="./comparison.js"></script>
+    <script src="./DOM-manipulation.js"></script>
   </body>
 </html>
