--- a/Week 1/Day4 - Javascript 2/index.html
+++ b/Week 1/Day4 - Javascript 2/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./array.js"></script> -->
-    <script src="./prototype.js"></script>
+    <!-- <script src="./prototype.js"></script> -->
+    <script src="./ArrayMethodsHW4.js"></script>
   </body>
 </html>
