'this' keyword notes, still need practice

--- a/Week 1/Day4 - Javascript 2/index.html
+++ b/Week 1/Day4 - Javascript 2/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="./array.js"></script> -->
     <!-- <script src="./prototype.js"></script> -->
-    <script src="./ArrayMethodsHW4.js"></script>
+    <!-- <script src="./ArrayMethodsHW4.js"></script> -->
+    <script src="./thisKeyword.js"></script>
   </body>
 </html>
