--- a/Week 1/Day4 - Javascript 2/index.html
+++ b/Week 1/Day4 - Javascript 2/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./array.js"></script> -->
     <!-- <script src="./prototype.js"></script> -->
     <!-- <script src="./ArrayMethodsHW4.js"></script> -->
-    <script src="./thisKeyword.js"></script>
+    <!-- <script src="./thisKeyword.js"></script> -->
+     <script src="./oop.js"></script>  
   </body>
 </html>
