Took more notes on prototype, __proto__, and prototype chain

--- a/Week 1/Day4 - Javascript 2/index.html
+++ b/Week 1/Day4 - Javascript 2/index.html
@@ -11,6 +11,6 @@
     <!-- <script src="./prototype.js"></script> -->
     <!-- <script src="./ArrayMethodsHW4.js"></script> -->
     <!-- <script src="./thisKeyword.js"></script> -->
-     <script src="./oop.js"></script>  
+     <script src="./prototype_inheritance.js"></script>  
   </body>
 </html>
